--- a/admin/src/styles/AdminLogin.module.css
+++ b/admin/src/styles/AdminLogin.module.css
@@ -1,6 +1,6 @@
 .adminLoginContainer {
-    --color-primary: rgba(0, 128, 152, 0.9);
-    --color-secondary: #2bb3cd;
+    --color-primary: #018ABE;
+    --color-secondary: #05AFF0;
     --color-white: white;
     --radius-small: 5px;
     --radius-large: 10px;
